// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`query-bar render default 1`] = `

<div>
  <div class="relative flex grow items-center">
    <div
      id="query-bar"
      class="relative z-[51] w-full"
    >
      <input
        type="text"
        class="border-input ring-offset-background placeholder:text-muted-foreground clear-none flex h-10 w-full border px-3 py-2 file:border-0 file:bg-transparent file:text-sm file:font-medium focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 dark:bg-muted-foreground/5 rounded-xl bg-white text-sm text-transparent caret-black focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 dark:caret-white"
        role="search"
        autocorrect="off"
        autocomplete="off"
        autocapitalize="off"
        placeholder="Query Lookup, e.g: :root > *"
        value=":root"
      >
      <gui-query-highlighter
        parsedtokens
        query=":root"
      >
      </gui-query-highlighter>
    </div>
  </div>
</div>

`;

exports[`query-bar render with custom query 1`] = `

<div>
  <div class="relative flex grow items-center">
    <div
      id="query-bar"
      class="relative z-[51] w-full"
    >
      <input
        type="text"
        class="border-input ring-offset-background placeholder:text-muted-foreground clear-none flex h-10 w-full border px-3 py-2 file:border-0 file:bg-transparent file:text-sm file:font-medium focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 dark:bg-muted-foreground/5 rounded-xl bg-white text-sm text-transparent caret-black focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 dark:caret-white"
        role="search"
        autocorrect="off"
        autocomplete="off"
        autocapitalize="off"
        placeholder="Query Lookup, e.g: :root > *"
        value="[name=&quot;my-package&quot;][version=&quot;1.0.0&quot;]"
      >
      <gui-query-highlighter
        parsedtokens
        query="[name=&quot;my-package&quot;][version=&quot;1.0.0&quot;]"
      >
      </gui-query-highlighter>
    </div>
  </div>
</div>

`;
